--- a/public/filter.html
+++ b/public/filter.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Products</title>
+    <title>Filter Page</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -26,10 +26,6 @@
       src="https://kit.fontawesome.com/346f7ab6b7.js"
       crossorigin="anonymous"
     ></script>
-    <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
-  />
     <script src="./bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="./css/product.css" />
     <!-- <link
@@ -69,7 +65,16 @@
         </div>
       </div>
     </div>
+    <div class="sort-container">
+        <button type="dec-button" class="btn btn-primary" id="price-dec">
+          Price High to Low
+        </button>
+        <button type="asc-button" class="btn btn-primary" id="price-asc">
+          Price Low to High
+        </button>
+      </div>
     <div id="productDetails"></div>
+    
 
     <script src="js/product.js"></script>
   </body>
