login logout reg done

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
 
 <body>
     <div class="firstSection">
-        <div class="logoLocation"></div>
+        <div class="logoLocation"><a href="./index.html">LOGO位置(可回到主頁)</a></div>
         <div class="userArea">
             <button id="loginBtn" type="button" class="btn btn-outline-primary">Sign in</button>
             <div class="overlay" id="loginOverlay">
@@ -24,9 +24,9 @@
                     <h2>Login</h2>
                     <form id="loginForm">
                         <label for="email">Email:</label><br>
-                        <input type="email" id="email" required><br><br>
+                        <input type="email" id="loginEmail" required><br><br>
                         <label for="password">Password:</label><br>
-                        <input type="password" id="password" required><br><br>
+                        <input type="password" id="loginPassword" required><br><br>
                         <button type="submit">Submit</button>
                     </form>
                 </div>
