--- a/public/profile.html
+++ b/public/profile.html
@@ -1,11 +1,90 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Profile</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="./css/index.css" />
 </head>
+
 <body>
-    
+    <div class="firstSection">
+        <div class="logoLocation"></div>
+        <div class="userArea">
+            <button id="loginBtn" type="button" class="btn btn-outline-primary">Sign in</button>
+            <div class="overlay" id="loginOverlay">
+                <div class="popup">
+                    <span class="close-btn" id="loginCloseBtn">&times;</span>
+                    <h2>Login</h2>
+                    <form id="loginForm">
+                        <label for="email">Email:</label><br>
+                        <input type="email" id="email" required><br><br>
+                        <label for="password">Password:</label><br>
+                        <input type="password" id="password" required><br><br>
+                        <button type="submit">Submit</button>
+                    </form>
+                </div>
+            </div>
+            <button id="signupBtn" type="button" class="btn btn-outline-light">Sign up</button>
+            <div class="overlay" id="signUpOverlay">
+                <div class="popup">
+                    <span class="close-btn" id="signUpCloseBtn">&times;</span>
+                    <h2>Register</h2>
+                    <form id="registerForm">
+                        <label for="username">Username:</label><br>
+                        <input type="text" id="username" required><br><br>
+                        <label for="password">Password:</label><br>
+                        <input type="password" id="password" required><br><br>
+                        <label for="email">Email:</label><br>
+                        <input type="email" id="email" required><br><br>
+                        <button type="submit">Submit</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="secondSection">
+        <div class="profile-container">
+            <h1 class="title">Profile Page</h1>
+            <div id="profile-form">
+                <div class="form-group">
+                    Username : <span id="usernameLabel">??</span>
+                </div>
+                <div class="form-group">
+                    Nickname :<span id="nicknameLabel">??</span>
+                </div>
+
+                <div class="form-group">Gender :<span id="genderLabel">??</span></div>
+                <div class="form-group">
+                    Birthday :<span id="birthdayLabel">??</span>
+                </div>
+                <div class="form-group">Phone :<span id="phoneLabel">??</span></div>
+                <div class="form-group">
+                    Address :<span id="addressLabel">??</span>
+                </div>
+                <div class="form-group">Email :<span id="emailLabel">??</span></div>
+            </div>
+            <button type="button" id="updateBtn" class="updateBtn btn btn-1">
+                Update Your Profile
+            </button>
+            <button type="button" id="shoppingCartBtn" class="shoppingCartBtn btn btn-2">
+                Shopping Cart
+            </button>
+            <button type="button" id="orderRecordBtn" class="orderRecordBtn btn btn-1">
+                Order Record
+            </button>
+            <button type="button" id="logoutBtn" class="logoutBtn btn btn-2">
+                Logout
+            </button>
+        </div>
+    </div>
+    <script src="./js/index.js"></script>
 </body>
+
 </html>
