--- a/public/index.html
+++ b/public/index.html
@@ -1,72 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Main Page</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="./css/index.css" />
-</head>
+  </head>
 
-<body>
+  <body>
     <div class="firstSection">
-        <div class="logoLocation"></div>
-        <div class="userArea">
-            <button id="loginBtn" type="button" class="btn btn-outline-primary">Sign in</button>
-<<<<<<< HEAD
-
-            <button id="signupBtn" type="button" class="btn btn-outline-light">Sign up</button>
-            <div class="overlay" id="overlay">
-                <div class="popup">
-                    <span class="close-btn" id="closeBtn">&times;</span>
-                    <h2>Register</h2>
-                    <form id="registerForm">
-                        <label for="username">Username:</label>
-                        <input type="text" id="username" required><br><br>
-                        <label for="password">Password:</label>
-                        <input type="password" id="password" required><br><br>
-                        <label for="email">Email:</label>
-=======
-            <div class="overlay" id="loginOverlay">
-                <div class="popup">
-                    <span class="close-btn" id="loginCloseBtn">&times;</span>
-                    <h2>Login</h2>
-                    <form id="loginForm">
-                        <label for="email">Email:</label><br>
-                        <input type="email" id="email" required><br><br>
-                        <label for="password">Password:</label><br>
-                        <input type="password" id="password" required><br><br>
-                        <button type="submit">Submit</button>
-                    </form>
-                </div>
-            </div>
-            <button id="signupBtn" type="button" class="btn btn-outline-light">Sign up</button>
-            <div class="overlay" id="signUpOverlay">
-                <div class="popup">
-                    <span class="close-btn" id="signUpCloseBtn">&times;</span>
-                    <h2>Register</h2>
-                    <form id="registerForm">
-                        <label for="username">Username:</label><br>
-                        <input type="text" id="username" required><br><br>
-                        <label for="password">Password:</label><br>
-                        <input type="password" id="password" required><br><br>
-                        <label for="email">Email:</label><br>
->>>>>>> 02c7deddcc8920aa8e45dd40a4a1bdca53e5bc9a
-                        <input type="email" id="email" required><br><br>
-                        <button type="submit">Submit</button>
-                    </form>
-                </div>
-            </div>
+      <div class="logoLocation"></div>
+      <div class="userArea">
+        <button id="loginBtn" type="button" class="btn btn-outline-primary">
+          Sign in
+        </button>
+        <div class="overlay" id="loginOverlay">
+          <div class="popup">
+            <span class="close-btn" id="loginCloseBtn">&times;</span>
+            <h2>Login</h2>
+            <form id="loginForm">
+              <label for="email">Email:</label><br />
+              <input type="email" id="email" required /><br /><br />
+              <label for="password">Password:</label><br />
+              <input type="password" id="password" required /><br /><br />
+              <button type="submit">Submit</button>
+            </form>
+          </div>
         </div>
+        <button id="signupBtn" type="button" class="btn btn-outline-light">
+          Sign up
+        </button>
+        <div class="overlay" id="signUpOverlay">
+          <div class="popup">
+            <span class="close-btn" id="signUpCloseBtn">&times;</span>
+            <h2>Register</h2>
+            <form id="registerForm">
+              <label for="username">Username:</label><br />
+              <input type="text" id="username" required /><br /><br />
+              <label for="password">Password:</label><br />
+              <input type="password" id="password" required /><br /><br />
+              <label for="email">Email:</label><br />
+              <input type="email" id="email" required /><br /><br />
+              <button type="submit">Submit</button>
+            </form>
+          </div>
+        </div>
+      </div>
     </div>
-    <div class="secondSection">
-    </div>
-    <script src="./js/index.js"></script>
-</body>
 
+    <div class="secondSection">
+      <div class="aicontainer">
+        <h1>Phone Case Design Generator</h1>
+        <div class="promptcontainer">
+          <form id="promptForm">
+            <label for="prompt">Enter your prompt:</label>
+            <input type="text" id="prompt" name="prompt" required />
+            <button type="submit">Generate Image</button>
+          </form>
+        </div>
+        <div class="imagecontainer">
+          <div id="result"></div>
+        </div>
+      </div>
+    </div>
+
+    <script src="./js/index.js"></script>
+  </body>
 </html>
