--- a/public/filter.html
+++ b/public/filter.html
@@ -3,79 +3,57 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Filter Page</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous"
-    />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400..900&family=Figtree:ital,wght@0,300..900;1,300..900&display=swap"
-      rel="stylesheet"
-    />
+    <title>Filter</title>
     <script
-      src="https://kit.fontawesome.com/346f7ab6b7.js"
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+      integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
       crossorigin="anonymous"
     ></script>
-    <script src="./bootstrap.bundle.min.js"></script>
-    <link rel="stylesheet" href="./css/product.css" />
-    <!-- <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
-    /> -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+      integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="./css/filter.css" />
   </head>
   <body>
-    <div class="navbar">
-      <a href="#home">Home</a>
-      <a href="#news">News</a>
-      <div class="dropdown">
-        <button class="dropbtn">
-          Products
-          <!-- <i class="fa fa-caret-down"></i> -->
-        </button>
-        <div class="dropdown-content">
-          <div class="row">
-            <div class="column">
-              <h3>Phone Case</h3>
-              <a>Own Brand</a>
-              <a>Not Own Brand</a>
-            </div>
-            <div class="column">
-              <h3>Screen Protector</h3>
-              <a>Ar</a>
-              <a>Privacy</a>
-              <a>Anti Blue</a>
-              <a>Anti Fingerprint</a>
-            </div>
-            <div class="column">
-              <h3>Lens Protector</h3>
-              <a>Camera Guard</a>
-              <a>Lens Guard</a>
+    <form id="filterForm">
+      <div class="navbar">
+        <a href="#home">Home</a>
+        <a href="#news">News</a>
+        <div class="dropdown">
+          <button class="dropbtn">Products</button>
+          <div class="dropdown-content">
+            <div class="row">
+              <div class="column" class="casecolumn">
+                <h3>Phone Case</h3>
+                <div class="row2">
+                  <a>Own Brand</a>
+                  <a>Not Own Brand</a>
+                </div>
+              </div>
+              <div class="column" class="screencolumn">
+                <h3>Screen Protector</h3>
+                <div class="row3">
+                  <a>Ar</a>
+                  <a>Privacy</a>
+                  <a>Anti Blue</a>
+                  <a>Anti Fingerprint</a>
+                </div>
+              </div>
+              <div class="column" class="lenscolumn">
+                <h3>Lens Protector</h3>
+                <div class="row4">
+                  <a>Camera Guard</a>
+                  <a>Lens Guard</a>
+                </div>
+              </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
-    <div class="sort-container">
-        <button type="dec-button" class="btn btn-primary" id="price-dec">
-          Price High to Low
-        </button>
-        <button type="asc-button" class="btn btn-primary" id="price-asc">
-          Price Low to High
-        </button>
-      </div>
-    <div id="productDetails"></div>
-    
-
-    <script src="js/product.js"></script>
+      <div id="productDetails"></div>
+    </form>
+    <script src="js/filter.js"></script>
   </body>
 </html>
