--- a/public/filter.html
+++ b/public/filter.html
@@ -52,6 +52,15 @@
           </div>
         </div>
       </div>
+      <div class="form-group" id="product_type_area">
+        <label for="productType">Product Type:</label>
+        <select name="product_type" id="productType">
+          <option value="" disabled selected>Select Product Type</option>
+          <option value="phoneCase">Phone Case</option>
+          <option value="lensProtector">Lens Protector</option>
+          <option value="screenProtector">Screen Protector </option>
+        </select>
+      </div>
       <div id="productDetails"></div>
     </form>
     <script src="js/filter.js"></script>
