--- a/public/filter.html
+++ b/public/filter.html
@@ -17,7 +17,8 @@
     <link rel="stylesheet" href="./css/filter.css" />
   </head>
   <body>
-    <form id="filterForm">
+    <form id="filterForm" action="/contact"
+    method="POST">
       <div class="navbar">
         <a href="#home">Home</a>
         <a href="#news">News</a>
