--- a/public/product_details.html
+++ b/public/product_details.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Products</title>
+    <title>Product Details</title>
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
       integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
@@ -14,7 +14,7 @@
       integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="./css/product.css" />
+    <link rel="stylesheet" href="./css/product_details.css" />
   </head>
   <body>
     <form id="productForm">
@@ -59,6 +59,6 @@
     </div>
   </form>
 
-    <script src="js/product.js"></script>
+    <script src="js/product_details.js"></script>
   </body>
 </html>
