--- a/public/profile.html
+++ b/public/profile.html
@@ -66,7 +66,7 @@
                 <input type="text" id="addressLabel">
                 <br><br><br>
             </div>
-            <button type="button" id="saveEditBtn" class="saveEditBtn btn btn-1">Save Edit</button>
+            <button type="button" id="saveEditBtn" class="saveEditBtn btn btn-1">Save</button>
         </div>
     </div>
     <script src="./js/profile.js"></script>
