--- a/public/productDetails.html
+++ b/public/productDetails.html
@@ -14,7 +14,7 @@
       integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="./css/product_details.css" />
+    <link rel="stylesheet" href="./css/productDetails.css" />
   </head>
   <body>
     <form id="productForm">
@@ -59,6 +59,6 @@
     </div>
   </form>
 
-    <script src="js/product_details.js"></script>
+    <script src="js/productDetails.js"></script>
   </body>
 </html>
