--- a/public/productsFilter.html
+++ b/public/productsFilter.html
@@ -15,7 +15,7 @@
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="./css/products.css" />
+    <link rel="stylesheet" href="./css/productsFilter.css" />
   </head>
 
   <body>
@@ -97,6 +97,6 @@
       </div>
     </div>
 
-    <script src="./js/products.js"></script>
+    <script src="./js/productsFilter.js"></script>
   </body>
 </html>
