done shopping cart route

--- a/public/productDetails.html
+++ b/public/productDetails.html
@@ -18,46 +18,43 @@
   </head>
   <body>
     <form id="productForm">
-    <div class="navbar">
-      <a href="#home">Home</a>
-      <a href="#news">News</a>
-      <div class="dropdown">
-        <button class="dropbtn">
-          Products
-        </button>
-        <div class="dropdown-content">
-          <div class="row">
-            <div class="column" class="casecolumn">
-              <h3 class="casebtn">Phone Case</h3>
-              <div class="row2">
-                <a class="ownBrandbtn">Own Brand</a>
-                <a>Not Own Brand</a>
+      <div class="navbar">
+        <a href="#home">Home</a>
+        <a href="#news">News</a>
+        <div class="dropdown">
+          <button class="dropbtn">Products</button>
+          <div class="dropdown-content">
+            <div class="row">
+              <div class="column" class="casecolumn">
+                <h3 class="casebtn">Phone Case</h3>
+                <div class="row2">
+                  <a class="ownBrandbtn">Own Brand</a>
+                  <a>Not Own Brand</a>
+                </div>
               </div>
-            </div>
-            <div class="column" class="screencolumn">
-              <h3 class="screenbtn">Screen Protector</h3>
-              <div class="row3">
-                <a>Ar</a>
-                <a>Privacy</a>
-                <a>Anti Blue</a>
-                <a>Anti Fingerprint</a>
+              <div class="column" class="screencolumn">
+                <h3 class="screenbtn">Screen Protector</h3>
+                <div class="row3">
+                  <a>Ar</a>
+                  <a>Privacy</a>
+                  <a>Anti Blue</a>
+                  <a>Anti Fingerprint</a>
+                </div>
               </div>
-            </div>
-            <div class="column" class="lenscolumn">
-              <h3 class="lensbtn">Lens Protector</h3>
-              <div class="row4">
-                <a>Camera Guard</a>
-                <a>Lens Guard</a>
+              <div class="column" class="lenscolumn">
+                <h3 class="lensbtn">Lens Protector</h3>
+                <div class="row4">
+                  <a>Camera Guard</a>
+                  <a>Lens Guard</a>
+                </div>
               </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
-    <div id="productDetails">
-
-    </div>
-  </form>
+    </form>
+    
+    <div id="productDetails"></div>
 
     <script src="js/productDetails.js"></script>
   </body>
