--- a/public/productsFilter.html
+++ b/public/productsFilter.html
@@ -60,6 +60,7 @@
         </div>
       </div>
     </div>
+
     <div class="filter-product-container">
       <div id="second-section d-none d-sm-block">
         <div class="sort-container">
@@ -80,17 +81,17 @@
               <option value="screenProtector">Screen Protector</option>
             </select>
           </div>
-         
         </form>
       </div>
       <div id="results"></div>
-
-      <div id="third-section">
-        <section class="gallery min-vh-100">
+    </div>
+    <div id="third-section">
+      <div class="productsection">
+        <section class="gallery min-vh-100" id="productcard">
           <div class="container-lg">
             <div
               id="products-container"
-              class="row gy-4 row-cols-1 row-cols-sm-2 row-cols-md-3"
+              class="products-container row gy-4 row-cols-1 row-cols-sm-2 row-cols-md-3"
             ></div>
           </div>
         </section>
@@ -100,3 +101,4 @@
     <script src="./js/productsFilter.js"></script>
   </body>
 </html>
+a
