--- a/public/index.html
+++ b/public/index.html
@@ -71,6 +71,14 @@
       </div>
     </div>
 
+    <div id="chatBox">
+      <div id="chatBoxHeader">Chat with us!</div>
+      <div id="chatBody"></div>
+      <input type="text" id="chatInput" placeholder="Type your question...">
+      <button id="sendBtn">Send</button>
+    </div>
+    <button id="chatToggleBtn">Chat</button>
+
     <script src="./js/index.js"></script>
   </body>
 </html>
