--- a/public/productsFilter.html
+++ b/public/productsFilter.html
@@ -70,6 +70,7 @@
           <button type="asc-button" class="btn btn-primary" id="price-asc">
             Price Low to High
           </button>
+          <input hidden value="asc" id="sorting" />
         </div>
         <form id="productsForm">
           <div class="form-group" id="product_type_area">
@@ -81,6 +82,7 @@
               <option value="screenProtector">Screen Protector</option>
             </select>
           </div>
+          <div class="form-group" id="category_type_area"></div>
         </form>
       </div>
       <div id="results"></div>
