--- a/public/index.html
+++ b/public/index.html
@@ -43,11 +43,11 @@
                     <h2>Register</h2>
                     <form id="registerForm">
                         <label for="username">Username:</label><br>
-                        <input type="text" id="username" required><br><br>
+                        <input type="text" id="registerUsername" required><br><br>
                         <label for="password">Password:</label><br>
-                        <input type="password" id="password" required><br><br>
+                        <input type="password" id="registerPassword" required><br><br>
                         <label for="email">Email:</label><br>
-                        <input type="email" id="email" required><br><br>
+                        <input type="email" id="registerEmail" required><br><br>
                         <button type="submit">Submit</button>
                     </form>
                 </div>
@@ -72,7 +72,7 @@
     </div>
 
     <div id="chatBox">
-      <div id="chatBoxHeader">Chat with us!</div>
+      <div id="chatBoxHeader"><div>ChatBot</div><div><button id="createNewChatBtn">NEW CHAT</button></div></div>
       <div id="chatBody"></div>
       <input type="text" id="chatInput" placeholder="Type your question...">
       <button id="sendBtn">Send</button>
