--- a/public/productsFilter.html
+++ b/public/productsFilter.html
@@ -88,7 +88,7 @@
           <div class="form-group" id="sub_category_type_area">
             <label for="subCategoryType">Sub Category:</label>
             <select id="subCategoryTypeSelect">
-              <option value="">請選擇類別</option>
+              <option value="" disabled selected>Select Subcategory Type</option>
               <option value="1">類別 1</option>
               <option value="2">類別 2</option>
               <option value="3">類別 3</option>
