--- a/public/orderDetail.html
+++ b/public/orderDetail.html
@@ -13,6 +13,36 @@
   
   <link rel="stylesheet" href="./css/orderDetails.css" />
     <title>Order Details</title>
+
+
+    <br>
+    <br>
+    <h1>Order Details</h1>
+    <br>
+    <br>
+    <h2 id="orderNum"></h2>
+    <form class="card" id="checkout">
+        <div id="orderDetails">
+            <div class="productDetailsCol">
+            
+            </div>
+        </div>
+        <br>
+        <div class="price">
+            <!-- <div>Status: <span id="status"></span></div> -->
+            <div>Total Price: $ <span id="totalPrice"><span></span></div>
+        </div>
+        <br>
+    </form>
+    <div class="underBtn">
+        <div class="payOrCancel">
+            <div><button type="button" class="btn btn-success" id="checkOutBtn">Check Out</button></div>
+            <div><button type="button" class="btn btn-warning" id="cancelOrder">Cancel Order</button></div>
+        </div>
+        <br>
+        <a type="button" class="btn btn-outline-secondary" id="gobackBtn" href="./shoppingCart.html">Go Back to shopping cart</a>
+      </div>
+    <br>
 </head>
 <body>
     
@@ -20,3 +50,4 @@
     <script src="./js/orderDetail.js"></script>
 </body>
 </html>
+
