--- a/public/productsFilter.html
+++ b/public/productsFilter.html
@@ -80,23 +80,18 @@
               <option value="1">Phone Case</option>
               <option value="2">Lens Protector</option>
               <option value="3">Screen Protector</option>
-              <!-- <option value="phoneCase">Phone Case</option>
-              <option value="lensProtector">Lens Protector</option>
-              <option value="screenProtector">Screen Protector</option> -->
             </select>
           </div>
           <div class="form-group" id="sub_category_type_area">
             <label for="subCategoryType">Sub Category:</label>
             <select id="subCategoryTypeSelect">
-              <option value="" disabled selected>Select Subcategory Type</option>
+              <option value="" disabled selected>
+                Select Subcategory Type
+              </option>
               <option value="1">類別 1</option>
               <option value="2">類別 2</option>
               <option value="3">類別 3</option>
-          </select>
-
-            <!-- <select name="sub_category_type" id="sub_category_type">
-              <option value="" disabled selected>Select Sub Category Type</option>
-            </select> -->
+            </select>
           </div>
         </form>
       </div>
@@ -118,4 +113,3 @@
     <script src="./js/productsFilter.js"></script>
   </body>
 </html>
-
