--- a/public/productDetails.html
+++ b/public/productDetails.html
@@ -14,56 +14,48 @@
       integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
       crossorigin="anonymous"
     ></script>
+    <script src="https://unpkg.com/embla-carousel/embla-carousel.umd.js"></script>
+  
     <link rel="stylesheet" href="./css/productDetails.css" />
+    <link rel="stylesheet" href="./css/embla/embla.css" />
   </head>
   <body>
-    <form id="productForm">
     <div class="navbar">
       <a href="#home">Home</a>
       <a href="#news">News</a>
-     
-    <div id="productDetails">
-
     </div>
-  </form>
-      <div class="navbar">
-        <a href="#home">Home</a>
-        <a href="#news">News</a>
-        <div class="dropdown">
-          <button class="dropbtn">Products</button>
-          <div class="dropdown-content">
-            <div class="row">
-              <div class="column" class="casecolumn">
-                <h3 class="casebtn">Phone Case</h3>
-                <div class="row2">
-                  <a class="ownBrandbtn">Own Brand</a>
-                  <a>Not Own Brand</a>
-                </div>
-              </div>
-              <div class="column" class="screencolumn">
-                <h3 class="screenbtn">Screen Protector</h3>
-                <div class="row3">
-                  <a>Ar</a>
-                  <a>Privacy</a>
-                  <a>Anti Blue</a>
-                  <a>Anti Fingerprint</a>
-                </div>
-              </div>
-              <div class="column" class="lenscolumn">
-                <h3 class="lensbtn">Lens Protector</h3>
-                <div class="row4">
-                  <a>Camera Guard</a>
-                  <a>Lens Guard</a>
-                </div>
-              </div>
+
+    <form id="productForm">
+      <div id="productDetails">
+        <div class="embla productImage">
+          <div class="embla__viewport">
+            <div class="embla__container" id="embla__container"></div>
+          </div>
+          <div class="embla-thumbs">
+            <div class="embla-thumbs__viewport">
+              <div class="embla-thumbs__container" id="embla-thumbs__container"></div>
             </div>
           </div>
         </div>
+        <div class="productInfo">
+          <div id="productTitle">Product Title</div>
+          <div id="productPrice">$0</div>
+          <p id="productDescription">Apple</p>
+          <div class="form-group" id="color_dropdown_area">
+            <label for="color_dropdown">Color:</label>
+            <select name="color_dropdown" id="color_dropdown">
+              <option value="" disabled selected>Select Color</option>
+            </select>
+          </div>
+          <div class="form-group" id="model_dropdown_area">
+            <label for="model_dropdown">Model:</label>
+            <select name="model_dropdown" id="model_dropdown">
+              <option value="" disabled selected>Select Model</option>
+            </select>
+          </div>
+          <button type="submit" id="addToCartBtn">Add to Cart</button>
       </div>
     </form>
-    
-    <div id="productDetails"></div>
-
     <script src="js/productDetails.js"></script>
   </body>
 </html>
