--- a/public/index.html
+++ b/public/index.html
@@ -21,9 +21,9 @@
   <body>
     <div class="firstSection">
         <div class="logoLocation"><a href="./index.html">LOGO位置(可回到主頁)</a></div>
-        <a href="./productsFilter.html">product</a>
-        <a href="./shoppingCart.html">CART</a>
         <div class="userArea">
+          <a href="./productsFilter.html">Product</a>
+          <a href="./shoppingCart.html">Shopping Cart</a>
             <button id="loginBtn" type="button" class="btn btn-outline-primary">Sign in</button>
             <div class="overlay" id="loginOverlay">
                 <div class="popup">
@@ -74,7 +74,7 @@
     </div>
 
     <div id="chatBox">
-      <div id="chatBoxHeader"><div>ChatBot</div><div><button id="createNewChatBtn">NEW CHAT</button></div></div>
+      <div id="chatBoxHeader"><div>ChatBot</div><div><button id="createNewChatBtn">CLEAR</button></div></div>
       <div id="chatBody"></div>
       <input type="text" id="chatInput" placeholder="Type your question...">
       <button id="sendBtn">Send</button>
