--- a/public/orderDetail.html
+++ b/public/orderDetail.html
@@ -13,8 +13,8 @@
   
   <link rel="stylesheet" href="./css/orderDetails.css" />
     <title>Order Details</title>
-
-
+</head>
+<body>
     <br>
     <br>
     <h1>Order Details</h1>
@@ -43,10 +43,7 @@
         <a type="button" class="btn btn-outline-secondary" id="gobackBtn" href="./shoppingCart.html">Go Back to shopping cart</a>
       </div>
     <br>
-</head>
-<body>
-    
-    
+    <script src="https://js.stripe.com/v3/"></script>
     <script src="./js/orderDetail.js"></script>
 </body>
 </html>
