--- a/public/index.html
+++ b/public/index.html
@@ -77,6 +77,31 @@
       </div>
     </div> -->
 
+    <!-- <div class="secondSection">
+      <div class="aicontainer">
+        <h1>Phone Case Design Generator</h1>
+        <div class="promptcontainer">
+          <form id="promptForm">
+            <label for="prompt">Enter your prompt:</label>
+            <input type="text" id="prompt" name="prompt" required />
+            <label for="phoneModel">Select Phone Model:</label>
+            <select id="phoneModel" name="phoneModel" required>
+              <option value="iphone15">iPhone 15</option>
+              <option value="iphone15plus">iPhone 15 Plus</option>
+              <option value="iphone15pro">iPhone 15 Pro</option>
+              <option value="iphone15promax">iPhone 15 Pro Max</option>
+            </select>
+            <button type="submit">Generate Image</button>
+           
+              <button type="button" class="btn btn-light" id="addToCartBtn">Add to cart</button>
+          </form>
+        </div>
+        <div class="imagecontainer">
+          <div id="result"></div>
+        </div>
+      </div>
+    </div> -->
+
     <div class="secondSection">
       <div class="aicontainer">
         <h1>Phone Case Design Generator</h1>
@@ -93,13 +118,14 @@
             </select>
             <button type="submit">Generate Image</button>
           </form>
+          <button type="button" class="btn btn-light" id="addToCartBtn" disabled>Add to cart</button>
         </div>
         <div class="imagecontainer">
           <div id="result"></div>
         </div>
       </div>
     </div>
-
+    
     <div id="chatBox">
       <div id="chatBoxHeader"><div>ChatBot</div><div><button id="createNewChatBtn">NEW CHAT</button></div></div>
       <div id="chatBody"></div>
