authRounter Admin Page

--- a/public/profile.html
+++ b/public/profile.html
@@ -61,6 +61,7 @@
                 <div class="tabTitle">
                     <h1>Profile</h1>
                 </div>
+                <div id="getInAdmin"></div>
                 <div class="tabDetailes">
                     <span class="profileFont">Username</span><br><br>
                     <span id="usernameLabel">empty</span>
