--- a/public/addProduct.html
+++ b/public/addProduct.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Edit Product</title>
+    <title>Add new product</title>
 </head>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
-<link rel="stylesheet" href="./css/editProduct.css" />
+<link rel="stylesheet" href="./css/addProduct.css" />
 </head>
 
 <body>
@@ -54,14 +53,14 @@
     </div>
 
     <div class="secondSection">
-        <div id="editProduct"></div>
-        <div id="editProductSave">
+        <div id="addProduct">
+        </div>
+        <div id="addProductSave">
             <button type="button" id="saveBtn" class="saveBtn">Save</button>
             <button type="button" id="backBtn" class="backBtn" onclick="location.href='admin.html'">Back</button>
         </div>
     </div>
 
-    <script src="./js/editProduct.js"></script>
+    <script src="./js/addProduct.js"></script>
 </body>
-
 </html>
