--- a/public/admin.html
+++ b/public/admin.html
@@ -64,6 +64,7 @@
             <div class="active">
                 <div class="tabTitle">
                     <h1>Product Management</h1>
+                    <button type="button" class="btn btn-outline-info" onclick="location.href='addProduct.html'">Add new product</button>
                 </div>
                 <div id="productList"></div>
             </div>
