--- a/public/index.html
+++ b/public/index.html
@@ -191,6 +191,17 @@
       </div>
   </div>
 
+  <div class="productsection">
+    <section class="gallery min-vh-100" id="productcard">
+      <div class="container-lg">
+        <div
+          id="products-container"
+          class="products-container row gy-4 row-cols-1 row-cols-sm-2 row-cols-md-3"
+        ></div>
+      </div>
+    </section>
+  </div>
+
     <div id="chatBox">
       <div id="chatBoxHeader">
         <div>ChatBot</div>
