--- a/public/index.html
+++ b/public/index.html
@@ -304,7 +304,7 @@
       <input type="text" id="chatInput" placeholder="Type your question..." />
       <button id="sendBtn">Send</button>
     </div>
-    <button id="chatToggleBtn">Chat</button> -->
+    <button id="chatToggleBtn">Chat</button> 
 
     <div class="product-image-container">
       <div id="result" class="product-image">Product Image</div>
