--- a/public/productDetails.html
+++ b/public/productDetails.html
@@ -23,6 +23,7 @@
     <div class="navbar">
       <a href="#home">Home</a>
       <a href="#news">News</a>
+      <a href="./productsFilter.html">Products</a>
     </div>
 
     <form id="productForm">
