--- a/public/productsFilter.html
+++ b/public/productsFilter.html
@@ -20,47 +20,170 @@
 
   <body>
     <div class="firstSection">
-      <div class="logoLocation">
-        <a href="./index.html">LOGO位置(可回到主頁)</a>
-      </div>
-      <div class="userArea">
-        <button id="loginBtn" type="button" class="btn btn-outline-primary">
-          Sign in
-        </button>
-        <div class="overlay" id="loginOverlay">
-          <div class="popup">
-            <span class="close-btn" id="loginCloseBtn">&times;</span>
-            <h2>Login</h2>
-            <form id="loginForm">
-              <label for="email">Email:</label><br />
-              <input type="email" id="loginEmail" required /><br /><br />
-              <label for="password">Password:</label><br />
-              <input type="password" id="loginPassword" required /><br /><br />
-              <button type="submit">Submit</button>
-            </form>
-          </div>
-        </div>
-        <button id="signupBtn" type="button" class="btn btn-outline-light">
-          Sign up
-        </button>
-        <div class="overlay" id="signUpOverlay">
-          <div class="popup">
-            <span class="close-btn" id="signUpCloseBtn">&times;</span>
-            <h2>Register</h2>
-            <form id="registerForm">
-              <label for="username">Username:</label><br />
-              <input type="text" id="username" required /><br /><br />
-              <label for="password">Password:</label><br />
-              <input type="password" id="password" required /><br /><br />
-              <label for="email">Email:</label><br />
-              <input type="email" id="email" required /><br /><br />
-              <button type="submit">Submit</button>
-            </form>
-          </div>
-        </div>
-      </div>
-    </div>
+      <nav class="navbar navbar-expand-lg bg-light" id="navbarhead">
+        <div class="container-fluid">
+          <a class="navbar-brand me-auto" href="/index.html">生作Phone</a>
 
+          <div
+            class="offcanvas offcanvas-end"
+            tabindex="-1"
+            id="offcanvasNavbar"
+            aria-labelledby="offcanvasNavbarLabel"
+          >
+            <div class="offcanvas-header">
+              <div class="offcanvas-title" id="offcanvasNavbarLabel">
+                生作Phone
+              </div>
+              <button
+                type="button"
+                class="btn-close"
+                data-bs-dismiss="offcanvas"
+                aria-label="Close"
+              ></button>
+            </div>
+            <div class="offcanvas-body">
+              <ul class="navbar-nav justify-content-center flex-grow-1 pe-3">
+                <li class="nav-item">
+                  <a
+                    class="nav-link mx-lg-2 active"
+                    aria-current="page"
+                    id="nav-home"
+                    href="./index.html"
+                    >Home</a
+                  >
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="./productsFilter.html">Products</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="./shoppingcart.html"
+                    >Shopping Cart</a
+                  >
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="./orderHistory.html">Order</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="/profile.html">Profile</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">About</a>
+                </li>
+              </ul>
+            </div>
+            <div class="overlay" id="loginOverlay">
+              <div class="popup">
+                <span class="close-btn" id="loginCloseBtn">&times;</span>
+                <h2>Login</h2>
+                <form id="loginForm">
+                  <label for="email">Email:</label><br />
+                  <input type="email" id="loginEmail" required /><br /><br />
+                  <label for="password">Password:</label><br />
+                  <input
+                    type="password"
+                    id="loginPassword"
+                    required
+                  /><br /><br />
+                  <button type="submit">Submit</button>
+                </form>
+              </div>
+            </div>
+            <div id="signupbox">
+              <button
+                id="signupBtn"
+                type="button"
+                class="btn btn-outline-light"
+              >
+                Sign up
+              </button>
+            </div>
+            <div class="overlay" id="signUpOverlay">
+              <div class="popup">
+                <span class="close-btn" id="signUpCloseBtn">&times;</span>
+                <h2>Register</h2>
+                <form id="registerForm">
+                  <label for="username">Username:</label><br />
+                  <input
+                    type="text"
+                    id="registerUsername"
+                    required
+                  /><br /><br />
+                  <label for="password">Password:</label><br />
+                  <input
+                    type="password"
+                    id="registerPassword"
+                    required
+                  /><br /><br />
+                  <label for="email">Email:</label><br />
+                  <input type="email" id="registerEmail" required /><br /><br />
+                  <button type="submit">Submit</button>
+                </form>
+              </div>
+            </div>
+            <div class="userArea"></div>
+            <button
+              class="navbar-toggler"
+              type="button"
+              data-bs-toggle="offcanvas"
+              data-bs-target="#offcanvasNavbar"
+              aria-controls="offcanvasNavbar"
+            >
+              <span class="navbar-toggler-icon"></span>
+            </button>
+          </div>
+          <div class="overlay" id="loginOverlay">
+            <div class="popup">
+              <span class="close-btn" id="loginCloseBtn">&times;</span>
+              <h2>Login</h2>
+              <form id="loginForm">
+                <label for="email">Email:</label><br />
+                <input type="email" id="loginEmail" required /><br /><br />
+                <label for="password">Password:</label><br />
+                <input
+                  type="password"
+                  id="loginPassword"
+                  required
+                /><br /><br />
+                <button type="submit" class="btn btn-primary">Submit</button>
+              </form>
+            </div>
+          </div>
+          <div id="signupbox">
+            <button id="signupBtn" type="button" class="btn btn-outline-light">
+              Sign up
+            </button>
+          </div>
+          <div class="overlay" id="signUpOverlay">
+            <div class="popup">
+              <span class="close-btn" id="signUpCloseBtn">&times;</span>
+              <h2>Register</h2>
+              <form id="registerForm">
+                <label for="username">Username:</label><br />
+                <input type="text" id="registerUsername" required /><br /><br />
+                <label for="password">Password:</label><br />
+                <input
+                  type="password"
+                  id="registerPassword"
+                  required
+                /><br /><br />
+                <label for="email">Email:</label><br />
+                <input type="email" id="registerEmail" required /><br /><br />
+                <button type="submit" class="btn btn-primary">Submit</button>
+              </form>
+            </div>
+          </div>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="offcanvas"
+            data-bs-target="#offcanvasNavbar"
+            aria-controls="offcanvasNavbar"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+        </div>
+      </nav>
+    </div>
     <div class="filter-product-container">
       <div id="second-section d-none d-sm-block">
         <div class="sort-container">
