--- a/public/index.html
+++ b/public/index.html
@@ -84,10 +84,10 @@
               </ul>
             </div>
           </div>
-          <div class="userArea"></div>
+          <div class="userArea">
           <div id="loginbox">
             <button id="loginBtn" type="button" class="btn btn-outline-light">
-              Loginin
+              Login
             </button>
           </div>
           <div class="overlay" id="loginOverlay">
@@ -132,6 +132,7 @@
               </form>
             </div>
           </div>
+        </div>
           <button
             class="navbar-toggler"
             type="button"
