--- a/public/index.html
+++ b/public/index.html
@@ -201,7 +201,7 @@
             <div id="result" class="product-image">Product Image</div>
           </div>
         </div>
-        <div class="col-md-5">
+        <div class="col-md-5" id="aiProductInfo">
           <h2>Type in your favourite keyword</h2>
           <form id="promptForm" class="mb-4">
             <div class="mb-3">
