--- a/admin/admin.html
+++ b/admin/admin.html
@@ -54,9 +54,9 @@
     <div class="secondSection">
         <div class="adminPageTabs">
             <div class="tab active" onclick="showTab(0)">Product Management</div>
-            <div class="tab" onclick="showTab(1)">Product Type Modification</div>
+            <!-- <div class="tab" onclick="showTab(1)">User Management</div>
             <div class="tab" onclick="showTab(2)">User Management</div>
-            <div class="tab" onclick="showTab(3)">Order Management</div>
+            <div class="tab" onclick="showTab(3)">Order Management</div> -->
         </div>
         <div class="content">
             <div class="active">
@@ -65,29 +65,6 @@
                     <button type="button" class="btn btn-outline-info" onclick="location.href='addProduct.html'">Add new product</button>
                 </div>
                 <div id="productList"></div>
-            </div>
-
-            <div>
-                <div class="tabTitle">
-                    <h1>Product Modification</h1>
-                </div>
-                <div id="modelList"></div>
-                <div id="colorList"></div>
-                <div id="categoryList"></div>
-            </div>
-
-            <div>
-                <div class="tabTitle">
-                    <h1>User Management</h1>
-                </div>
-                <div id="userList"></div>
-            </div>
-
-            <div>
-                <div class="tabTitle">
-                    <h1>Order Management</h1>
-                </div>
-                <div id="orderList"></div>
             </div>
 
         </div>
