--- a/public/productDetails.html
+++ b/public/productDetails.html
@@ -4,26 +4,196 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Product Details</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
     <script
-      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-      integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
-      integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
-      crossorigin="anonymous"
-    ></script>
-    <script src="https://unpkg.com/embla-carousel/embla-carousel.umd.js"></script>
-  
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+KR:wght@100;200;300;400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+KR:wght@100;200;300;400;500;600;700&family=LXGW+WenKai+TC:wght@300;400;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/productDetails.css" />
-    <link rel="stylesheet" href="./css/embla/embla.css" />
   </head>
   <body>
-    <div class="navbar">
-      <a href="#home">Home</a>
-      <a href="#news">News</a>
-      <a href="./productsFilter.html">Products</a>
+    <div class="firstSection">
+      <nav class="navbar navbar-expand-lg bg-light" id="navbarhead">
+        <div class="container-fluid">
+          <a class="navbar-brand me-auto" href="/index.html">生作Phone</a>
+
+          <div
+            class="offcanvas offcanvas-end"
+            tabindex="-1"
+            id="offcanvasNavbar"
+            aria-labelledby="offcanvasNavbarLabel"
+          >
+            <div class="offcanvas-header">
+              <div class="offcanvas-title" id="offcanvasNavbarLabel">
+                生作Phone
+              </div>
+              <button
+                type="button"
+                class="btn-close"
+                data-bs-dismiss="offcanvas"
+                aria-label="Close"
+              ></button>
+            </div>
+            <div class="offcanvas-body">
+              <ul class="navbar-nav justify-content-center flex-grow-1 pe-3">
+                <li class="nav-item">
+                  <a
+                    class="nav-link mx-lg-2 active"
+                    aria-current="page"
+                    id="nav-home"
+                    href="./index.html"
+                    >Home</a
+                  >
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="./productsFilter.html">Products</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="./shoppingcart.html"
+                    >Shopping Cart</a
+                  >
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="./orderHistory.html">Order</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="/profile.html">Profile</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">About</a>
+                </li>
+              </ul>
+            </div>
+            <div class="overlay" id="loginOverlay">
+              <div class="popup">
+                <span class="close-btn" id="loginCloseBtn">&times;</span>
+                <h2>Login</h2>
+                <form id="loginForm">
+                  <label for="email">Email:</label><br />
+                  <input type="email" id="loginEmail" required /><br /><br />
+                  <label for="password">Password:</label><br />
+                  <input
+                    type="password"
+                    id="loginPassword"
+                    required
+                  /><br /><br />
+                  <button type="submit">Submit</button>
+                </form>
+              </div>
+            </div>
+            <div id="signupbox">
+              <button
+                id="signupBtn"
+                type="button"
+                class="btn btn-outline-light"
+              >
+                Sign up
+              </button>
+            </div>
+            <div class="overlay" id="signUpOverlay">
+              <div class="popup">
+                <span class="close-btn" id="signUpCloseBtn">&times;</span>
+                <h2>Register</h2>
+                <form id="registerForm">
+                  <label for="username">Username:</label><br />
+                  <input
+                    type="text"
+                    id="registerUsername"
+                    required
+                  /><br /><br />
+                  <label for="password">Password:</label><br />
+                  <input
+                    type="password"
+                    id="registerPassword"
+                    required
+                  /><br /><br />
+                  <label for="email">Email:</label><br />
+                  <input type="email" id="registerEmail" required /><br /><br />
+                  <button type="submit">Submit</button>
+                </form>
+              </div>
+            </div>
+            <div class="userArea"></div>
+            <button
+              class="navbar-toggler"
+              type="button"
+              data-bs-toggle="offcanvas"
+              data-bs-target="#offcanvasNavbar"
+              aria-controls="offcanvasNavbar"
+            >
+              <span class="navbar-toggler-icon"></span>
+            </button>
+          </div>
+          <div class="overlay" id="loginOverlay">
+            <div class="popup">
+              <span class="close-btn" id="loginCloseBtn">&times;</span>
+              <h2>Login</h2>
+              <form id="loginForm">
+                <label for="email">Email:</label><br />
+                <input type="email" id="loginEmail" required /><br /><br />
+                <label for="password">Password:</label><br />
+                <input
+                  type="password"
+                  id="loginPassword"
+                  required
+                /><br /><br />
+                <button type="submit" class="btn btn-primary">Submit</button>
+              </form>
+            </div>
+          </div>
+          <div id="signupbox">
+            <button id="signupBtn" type="button" class="btn btn-outline-light">
+              Sign up
+            </button>
+          </div>
+          <div class="overlay" id="signUpOverlay">
+            <div class="popup">
+              <span class="close-btn" id="signUpCloseBtn">&times;</span>
+              <h2>Register</h2>
+              <form id="registerForm">
+                <label for="username">Username:</label><br />
+                <input type="text" id="registerUsername" required /><br /><br />
+                <label for="password">Password:</label><br />
+                <input
+                  type="password"
+                  id="registerPassword"
+                  required
+                /><br /><br />
+                <label for="email">Email:</label><br />
+                <input type="email" id="registerEmail" required /><br /><br />
+                <button type="submit" class="btn btn-primary">Submit</button>
+              </form>
+            </div>
+          </div>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="offcanvas"
+            data-bs-target="#offcanvasNavbar"
+            aria-controls="offcanvasNavbar"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+        </div>
+      </nav>
     </div>
 
     <form id="productForm">
