--- a/public/orderDetail.html
+++ b/public/orderDetail.html
@@ -36,7 +36,7 @@
                 <a class="nav-link" href="./productsFilter.html">Products</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./shoppingcart.html">Shopping Cart</a>
+                <a class="nav-link" href="./shoppingCart.html">Shopping Cart</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="./orderHistory.html">Order</a>
