--- a/public/orderHistory.html
+++ b/public/orderHistory.html
@@ -51,7 +51,7 @@
                 <a class="nav-link" href="./productsFilter.html">Products</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./shoppingcart.html"
+                <a class="nav-link" href="./shoppingCart.html"
                   >Shopping Cart</a
                 >
               </li>
