--- a/public/productsFilter.html
+++ b/public/productsFilter.html
@@ -68,7 +68,7 @@
                   <a class="nav-link" href="./productsFilter.html">Products</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="./shoppingcart.html"
+                  <a class="nav-link" href="./shoppingCart.html"
                     >Shopping Cart</a
                   >
                 </li>
@@ -198,6 +198,7 @@
     </div>
 
     <div class="filter-product-container">
+
       <div id="second-section d-none d-sm-block">
         <div class="sort-container">
           <button type="dec-button" class="btn btn-primary" id="price-dec">
@@ -231,6 +232,7 @@
           </div>
         </form>
       </div>
+
       <div id="results"></div>
     </div>
     <div id="third-section">
