--- a/public/index.html
+++ b/public/index.html
@@ -264,8 +264,8 @@
 
     <div id="chatBox">
       <div id="chatBoxHeader">
-        <div>ChatBot</div>
-        <div><button id="createNewChatBtn">CLEAR</button></div>
+        <div class="chatHeaderFont"><h4>ChatBot</h4></div>
+        <div><button id="createNewChatBtn" class="btn btn-warning">CLEAR</button></div>
       </div>
       <div id="chatBody"></div>
       <input type="text" id="chatInput" placeholder="Type your question..." />
